--- a/style.css
+++ b/style.css
@@ -354,6 +354,7 @@ a.cta-button:focus {
 
 .page-navigation-container {
   position: relative;
+  z-index: 2;
   background: #fff;
 }
 
